--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,6 +6,7 @@ $grey: #63718E;
 $light-blue: #286DBD;
 $blue: #111563;
 $green: #4CAE50;
+$dark: #423D59;
 
 $opacity-green: #E5FFF0;
 $opacity-blue: #E8F8FF;
