Added styles for promo, stepper, slider blocks

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,7 @@
 @import "./styles/global/global";
 
 @import "./styles/layout/header";
+@import "./styles/layout/promo";
+@import "./styles/layout/calculator";
+@import "./styles/layout/stepper";
+@import "./styles/layout/slider";
