Added styles for footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,5 @@
 @import "./styles/layout/calculator";
 @import "./styles/layout/stepper";
 @import "./styles/layout/slider";
+@import "./styles/layout/faq";
+@import "./styles/layout/footer";
