--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -7,6 +7,8 @@ $light-blue: #286DBD;
 $blue: #111563;
 $green: #4CAE50;
 $dark: #423D59;
+$black-light: #1C1E1F;
+$medium-gray: #7E8183;
 
 $opacity-green: #E5FFF0;
 $opacity-blue: #E8F8FF;
