Added slider and accordion

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 
 @import "./styles/setup/normalize";
 @import "./styles/setup/border-box";
+@import "./styles/setup/glide";
 
 @import "./styles/global/typography";
 @import "./styles/global/global";
