Styled calculator block

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,4 @@
 @import "./styles/layout/slider";
 @import "./styles/layout/faq";
 @import "./styles/layout/footer";
+@import "./styles/layout/popup";
