--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -10,6 +10,7 @@ $dark: #423D59;
 $black-light: #1C1E1F;
 $medium-gray: #7E8183;
 $border-color: #F0F4FD;
+$input-color: #909090;
 
 $opacity-green: #E5FFF0;
 $opacity-blue: #E8F8FF;
