--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -9,6 +9,26 @@ body {
   margin: 0;
 }
 
+*:focus {
+  outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+//input[type=number] {
+//  -moz-appearance: textfield;
+//}
+//
+//input[type="date"]::-webkit-inner-spin-button,
+//input[type="date"]::-webkit-calendar-picker-indicator {
+//  display: none;
+//  -webkit-appearance: none;
+//}
+
 h1,
 h2,
 h3,
