--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -62,6 +62,7 @@ $font-roboto-bold: "Roboto-Bold", sans-serif;
 $h1-font-size: 42px;
 $h2-font-size: 32px;
 $h3-4-font-size: 22px;
+$title-font-size: 36px;
 
 $p-font-size: 18px;
 $p-small-font-size: 16px;
