Added media quaries

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,4 +15,4 @@
 @import "./styles/layout/slider";
 @import "./styles/layout/faq";
 @import "./styles/layout/footer";
-@import "./styles/layout/popup";
+@import "styles/layout/popup";
