--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+* {
+  transition: all 200ms ease;
+}
+
 *:focus {
   outline: none;
 }
@@ -18,16 +22,6 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
-//input[type=number] {
-//  -moz-appearance: textfield;
-//}
-//
-//input[type="date"]::-webkit-inner-spin-button,
-//input[type="date"]::-webkit-calendar-picker-indicator {
-//  display: none;
-//  -webkit-appearance: none;
-//}
 
 h1,
 h2,
@@ -107,7 +101,7 @@ ul {
 }
 
 .main {
-  padding: 120px 0 50px;
+  padding: 120px 20px 50px;
 }
 
 .list-line {
