--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -47,3 +47,29 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin _1440 {
+  @media (max-width: 1440px){
+    @content;
+  }
+}
+@mixin _1280 {
+  @media (max-width: 1280px){
+    @content;
+  }
+}
+@mixin _1024 {
+  @media (max-width: 1024px){
+    @content;
+  }
+}
+@mixin _768 {
+  @media (max-width: 768px){
+    @content;
+  }
+}
+@mixin _480 {
+  @media (max-width: 480px){
+    @content;
+  }
+}
