--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -53,18 +53,35 @@
     @content;
   }
 }
-@mixin _1280 {
-  @media (max-width: 1280px){
+@mixin _1280-1025 {
+  @media (max-width: 1280px) and (min-width: 1025px) {
     @content;
   }
 }
+@mixin _1280 {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
+@mixin _1024-768 {
+  @media (max-width: 1024px) and (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin _1025 {
+  @media (min-width: 1025px){
+    @content;
+  }
+}
+
 @mixin _1024 {
   @media (max-width: 1024px){
     @content;
   }
 }
-@mixin _768 {
-  @media (max-width: 768px){
+@mixin _767 {
+  @media (max-width: 767px){
     @content;
   }
 }
