--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -21,7 +21,8 @@
 
     @include _1024 {
       position: absolute;
-      background: pink;
+      background: $white;
+      box-shadow: 0 2px 16px rgba(32, 108, 164, 0.16);
       top: 0;
       left: -200px;
       width: 200px;
@@ -80,6 +81,10 @@
     font-size: $nav-font-size;
     color: $dark;
     margin: 0 8px;
+
+    @include _1280-1025 {
+      margin: 0 6px;
+    }
 
     @include _1024 {
       margin: 0;
