Added dist folder

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -100,8 +100,8 @@
   &-dropdown {
     font-family: $font-roboto;
     font-size: $p-small-font-size;
-    color: $dark-grey;
-    border: 2px solid $dark-grey;
+    color: $medium-gray;
+    border: 2px solid $medium-gray;
     border-radius: 28px;
     padding: 8px 42px 8px 25px;
     max-width: 105px;
