--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -18,10 +18,12 @@ body {
   outline: none;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input {
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 h1,
@@ -131,6 +133,7 @@ ul {
   @include _1024 {
     display: flex;
     overflow: hidden;
+    flex-wrap: wrap;
   }
 
   &_link {
@@ -149,6 +152,12 @@ ul {
       padding-left: 0;
       margin-right: 20px;
       white-space: nowrap;
+    }
+
+    @include _767 {
+      font-size: $copy-font-size;
+      height: auto;
+      margin-bottom: 10px;
     }
 
     &:before {
