--- a/src/styles/layout/_calculator.scss
+++ b/src/styles/layout/_calculator.scss
@@ -205,6 +205,7 @@
     box-shadow: 0 1px 3px rgba(5, 41, 83, 0.14);
     background: $light-grey;
     z-index: 1;
+    padding: 10px;
   }
 
   &-item {
@@ -222,7 +223,8 @@
     }
 
     &:hover {
-      background-color: darken($light-grey, 10%);
+      color: $green;
+      background-color: $opacity-green;
     }
   }
 
