--- a/src/styles/layout/_stepper.scss
+++ b/src/styles/layout/_stepper.scss
@@ -4,6 +4,10 @@
   align-items: center;
   margin: 130px 0;
 
+  @include _1024 {
+    margin: 60px 0;
+  }
+
   &-paragraph {
     text-align: center;
     max-width: 840px;
